--- a/Assets/CSS/main.css
+++ b/Assets/CSS/main.css
@@ -11,24 +11,42 @@
 .position{
     max-width: 1200px;
     margin: auto;
-    padding: 20px;
+    overflow: hidden;
+    padding: 12px 16px;
     position: relative;
 }
+.position.remove-hidden{
+    overflow: unset;
+}
+.Loader-box1{
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
 body{
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
     width: 100%;
     overflow-x: hidden;
+}
+section{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+.remove-btn{
+    background: transparent;
+    outline: none;
+    border: none;
 }
 /* ------------------------------------------------------------
                     Header Contect
 ------------------------------------------------------------ */
 section.header-contect{
     width: 100%;
-    height: 50px;
+    overflow: hidden;
     text-align: center;
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, .9);
     color: white;
-    padding: 10px;
+    padding: 7px;
     font-size: 19px;
 }
 section.header-contect span{
@@ -67,7 +85,6 @@ nav {
     left: 0;
     right: 0;
     width: 100%;
-    height: 100px;
     background-color:black;
     z-index: 100;
     box-sizing: border-box;
@@ -77,14 +94,13 @@ nav .ToggleButton{
     display: none;
     /* float: right; */
     position: absolute;
-    top: 7px;
     right: 20px;
     font-size: 30px;
     color: #fff;
     cursor: pointer !important;
     z-index: 4;
     margin: 10px;
-    padding: 15px 20px;
+    padding: 12px 18px;
 }
 nav h1{
     font-size: 30px;
@@ -170,14 +186,28 @@ nav ul li span.active::after{
 --------------------------------------------------------- */
 header{
     height: 100vh;
-    background-color: brown;
+    /* background-color: brown; */
     overflow: hidden;
+    position: relative;;
 }
 header .home-pic{
     width: 100%;
+    min-height: calc(100vh - 100px);
     position: static;
 }
-
+.home-intro{
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    transform: translateY(-50%);
+    max-width: 500px;
+    width: 60%;
+    z-index: 2;
+    color: #ffffff;
+}
+.home-intro p{
+    font-size: 1.5rem;
+}
 /* -----------------------------------------------------------
                 About 
 ----------------------------------------------------------- */
